--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -8,7 +8,7 @@
         <p>Ceci est la page d’accueil. (Contenu à venir.)</p>
 
         <div>
-            <a>Se connecter</a>
+            <a href="{{ path('app_front_login') }}">Se connecter</a>
             <a >Créer un compte</a>
         </div>
     </main>
