UPD [home] Affichage home

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -10,7 +10,7 @@
         {% block javascripts %}
         {% endblock %}
     </head>
-    <body style="background-color: red;">
+    <body style="background-color: grey;">
         {% block body %}{% endblock %}
     </body>
 </html>
