UPD [register] Systeme d'inscription

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -2,14 +2,21 @@
 
 {% block title %}Symfsino{% endblock %}
 
+{% for msg in app.flashes('success') %}
+    <div class="alert alert-success">{{ msg }}</div>
+{% endfor %}
+{% for msg in app.flashes('error') %}
+    <div class="alert alert-danger">{{ msg }}</div>
+{% endfor %}
+
 {% block body %}
     <main class="container">
         <h1>Bienvenue</h1>
         <p>Ceci est la page d’accueil. (Contenu à venir.)</p>
 
         <div>
-            <a href="{{ path('app_front_login') }}">Se connecter</a>
-            <a >Créer un compte</a>
+            <a href="{{ path('app_login') }}">Se connecter</a>
+            <a href="{{ path('app_register') }}">Créer un compte</a>
         </div>
     </main>
 {% endblock %}
