--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -1,15 +1,8 @@
-{% extends 'base.html.twig' %}
+{% extends 'base_front.html.twig' %}
 
 {% block title %}Symfsino{% endblock %}
 
-{% block body %}
-
-    {% for msg in app.flashes('success') %}
-        <div class="alert alert-success">{{ msg }}</div>
-    {% endfor %}
-    {% for msg in app.flashes('error') %}
-        <div class="alert alert-danger">{{ msg }}</div>
-    {% endfor %}
+{% block page_content %}
 
     <main class="container">
         <h1>Bienvenue</h1>
