UPD [login] Connexion

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,7 +14,7 @@
         {% endblock %}
 
     </head>
-    <body style="background-color: grey;">
+    <body>
 
         {% block body %}{% endblock %}
 
