--- a/templates/base_front.html.twig
+++ b/templates/base_front.html.twig
@@ -25,7 +25,7 @@
               Bonjour {{ app.user.pseudo ?? app.user.email }}
             </span>
                         {# Adapte ces routes si différent chez toi #}
-                        <a class="btn btn-outline-primary me-2" href="{{ path('app_account') }}">Mon compte</a>
+                        <a class="btn btn-outline-primary me-2">Mon compte</a>
                         <a class="btn btn-outline-danger" href="{{ path('app_logout') }}">Se déconnecter</a>
                     {% else %}
                         <a class="btn btn-outline-primary me-2" href="{{ path('app_login') }}">Se connecter</a>
