ADD [register] Auto login

--- a/templates/base_front.html.twig
+++ b/templates/base_front.html.twig
@@ -32,7 +32,9 @@
                             <li><span class="dropdown-item-text"><strong>{{ app.user.email }}</strong></span></li>
                             <li><hr class="dropdown-divider"></li>
                             {# Éléments non cliquables pour l’instant #}
+                            {% if is_granted('ROLE_ADMIN') %}
                             <li><a class="dropdown-item-text" href="{{ path("app_dashboard") }}">Backoffice</a></li>
+                            {% endif %}
                             <li><a class="dropdown-item-text">Profil</a></li>
                             <li><hr class="dropdown-divider"></li>
                             <li><a class="dropdown-item text-danger" href="{{ path('app_logout') }}">Se déconnecter</a></li>
