ADD [global] Titre des pages

--- a/templates/admin/utilisateur/edit.html.twig
+++ b/templates/admin/utilisateur/edit.html.twig
@@ -1,6 +1,6 @@
 {% extends 'admin/base_admin.html.twig' %}
 
-{% block title %}Edit Utilisateur{% endblock %}
+{% block title %}Symfsino - Modifier un Utilisateur{% endblock %}
 
 {% block admin_content %}
     <h1>Edit Utilisateur</h1>
