--- a/templates/admin/utilisateur/show.html.twig
+++ b/templates/admin/utilisateur/show.html.twig
@@ -1,6 +1,6 @@
 {% extends 'admin/base_admin.html.twig' %}
 
-{% block title %}Utilisateur{% endblock %}
+{% block title %}Symfsino - Utilisateur ({{ utilisateur.pseudo }}){% endblock %}
 
 {% block admin_content %}
     <h1>Utilisateur</h1>
