--- a/templates/auth/register.html.twig
+++ b/templates/auth/register.html.twig
@@ -1,6 +1,6 @@
 {% extends 'auth/base_auth.html.twig' %}
 
-{% block title %}Inscription{% endblock %}
+{% block title %}Symfsino - Inscription{% endblock %}
 
 {% block body %}
     <h1>Créer un compte</h1>
