--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base_front.html.twig' %}
 
-{% block title %}Symfsino{% endblock %}
+{% block title %}Symfsino - Accueil{% endblock %}
 
 {% block page_content %}
     <main class="container">
