--- a/templates/admin/utilisateur/index.html.twig
+++ b/templates/admin/utilisateur/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'admin/base_admin.html.twig' %}
 
-{% block title %}Utilisateur index{% endblock %}
+{% block title %}Symfsino - Utilisateur{% endblock %}
 
 {% block admin_content %}
     <h1>Utilisateur index</h1>
