--- a/templates/admin/utilisateur/new.html.twig
+++ b/templates/admin/utilisateur/new.html.twig
@@ -1,6 +1,6 @@
 {% extends 'admin/base_admin.html.twig' %}
 
-{% block title %}New Utilisateur{% endblock %}
+{% block title %}Symfsino - Ajouter un Utilisateur{% endblock %}
 
 {% block admin_content %}
     <h1>Create new Utilisateur</h1>
