--- a/templates/auth/login.html.twig
+++ b/templates/auth/login.html.twig
@@ -1,6 +1,6 @@
 {% extends 'auth/base_auth.html.twig' %}
 
-{% block title %}Log in!{% endblock %}
+{% block title %}Symfsino - Connexion{% endblock %}
 
 {% block body %}
     <form method="post">
