--- a/templates/base_front.html.twig
+++ b/templates/base_front.html.twig
@@ -6,15 +6,12 @@
         <div class="container">
             <div class="d-flex flex-wrap align-items-center justify-content-between">
                 {# Logo / marque (non cliquable pour l’instant) #}
-                <span class="d-flex align-items-center mb-2 mb-lg-0 text-dark text-decoration-none fs-5 fw-bold">
-                    Symfsino
-                  </span>
+                <a href="{{ path("app_home") }}" class="d-flex align-items-center mb-2 mb-lg-0 text-dark text-decoration-none fs-5 fw-bold">Symfsino</a>
 
                 {# Liens de navigation (non cliquables pour l’instant) #}
                 <ul class="nav me-auto mb-2 mb-lg-0 ms-3">
-                    <li class="nav-item">
-                        <span class="nav-link px-2 link-dark">Accueil</span>
-                    </li>
+                    <li class="nav-item"><span class="nav-link px-2 link-dark">Bientôt</span></li>
+                    <li class="nav-item"><span class="nav-link px-2 link-dark">Bientôt</span></li>
                 </ul>
 
                 {# Zone compte #}
