--- a/templates/auth/base_auth.html.twig
+++ b/templates/auth/base_auth.html.twig
@@ -1,5 +1,15 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    {% block content %}{% endblock %}
+    <div class="row g-0 min-vh-100">
+        <div class="col-12 col-lg-6 bg-light d-none d-lg-block">
+            <img decoding="async" src="" alt="login-img" class="object-fit-cover" width="100%" height="100%">
+        </div>
+
+        <div class="col-12 col-lg-6 bg-secondary d-flex align-items-center justify-content-center position-relative">
+            <div class="w-100 p-md-4 p-3 my-3 mb-5" style="max-width: 720px;">
+                    {% block content %}{% endblock %}
+                </div>
+            </div>
+        </div>
 {% endblock %}
