--- a/templates/auth/login.html.twig
+++ b/templates/auth/login.html.twig
@@ -2,37 +2,44 @@
 
 {% block title %}Symfsino - Connexion{% endblock %}
 
-{% block body %}
-    <form method="post">
+{% block content %}
+    <h1>Se connecter</h1>
+
+    <form method="post" action="{{ path('app_login') }}">
         {% if error %}
             <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
         {% endif %}
 
-        {% if app.user %}
-            <div class="mb-3">
-                You are logged in as {{ app.user.userIdentifier }}, <a href="{{ path('app_logout') }}">Logout</a>
-            </div>
-        {% endif %}
+        <div>
+            <label for="email" class="required">Email</label>
+            <input
+                type="email"
+                id="email"
+                name="email"
+                required="required"
+                autocomplete="email"
+                value="{{ last_username|default('') }}"
+            >
+        </div>
 
-        <h1 class="h3 mb-3 font-weight-normal">Connexion</h1>
-        <label for="username">Email</label>
-        <input type="email" value="{{ last_username }}" name="_username" id="username" class="form-control" autocomplete="email" required autofocus>
-        <label for="password">Password</label>
-        <input type="password" name="_password" id="password" class="form-control" autocomplete="current-password" required>
-        <input type="hidden" name="_csrf_token" data-controller="csrf-protection" value="{{ csrf_token('authenticate') }}">
+        <div>
+            <label for="password" class="required">Mot de passe</label>
+            <input
+                type="password"
+                id="password"
+                name="password"
+                required="required"
+                autocomplete="current-password"
+            >
+        </div>
 
-        {#
-            Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
-            See https://symfony.com/doc/current/security/remember_me.html
+        <button class="btn btn-primary">Se connecter</button>
 
-            <div class="checkbox mb-3">
-                <input type="checkbox" name="_remember_me" id="_remember_me">
-                <label for="_remember_me">Remember me</label>
-            </div>
-        #}
-
-        <button class="btn btn-lg btn-primary" type="submit">
-            Sign in
-        </button>
+        <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
     </form>
+
+    <p class="mt-3">
+        Pas de compte ?
+        <a href="{{ path('app_register') }}">Créer un compte</a>
+    </p>
 {% endblock %}
