--- a/templates/auth/register.html.twig
+++ b/templates/auth/register.html.twig
@@ -2,7 +2,7 @@
 
 {% block title %}Symfsino - Inscription{% endblock %}
 
-{% block body %}
+{% block content %}
     <h1>Créer un compte</h1>
 
     {{ form_start(registrationForm) }}
@@ -11,4 +11,8 @@
     {{ form_row(registrationForm.plainPassword) }}
     <button class="btn btn-primary">S'inscrire</button>
     {{ form_end(registrationForm) }}
+    <p class="mt-3">
+        Déjà un compte ?
+        <a href="{{ path('app_login') }}">Se connecter</a>
+    </p>
 {% endblock %}
